test(component): Add type ahead list story. Fix search lagging a query behind.
affects: ak-emoji

FAB-1659

--- a/packages/ak-emoji/src/shared-variables.less
+++ b/packages/ak-emoji/src/shared-variables.less
@@ -12,3 +12,5 @@
 @emoji-picker-height: 295px;
 @emoji-list-width: 350px;
 @emoji-list-height: 205px;
+
+@scrollable-max-height: 264px;
